convert basic sql

--- a/imports.html
+++ b/imports.html
@@ -1,2 +1,6 @@
 <script src="./converters/JoinConverter.js" ></script>
+<script src="./converters/SelectConverter.js" ></script>
+<script src="./converters/FromConverter.js" ></script>
+<script src="./converters/WhereConverter.js" ></script>
+<script src="./converters/GroupByConverter.js" ></script>
 <script src="./sqlToLaravelConverter.js" ></script>
